Top alignment of flash box and sidebar. Fix.

--- a/admin/assets/stylesheets/elements/_flash-messages.scss
+++ b/admin/assets/stylesheets/elements/_flash-messages.scss
@@ -2,7 +2,7 @@
 .info-message {
   border: 5px solid $green;
   padding: 1em;
-  margin-top: 45px;
+  margin-top: 40px;
   color: $green;
   font-weight: bold;
 }
